fixed css overflow

--- a/charts/static/barchart.css
+++ b/charts/static/barchart.css
@@ -18,6 +18,7 @@
 	padding:0px;
 	height:300px;
 	padding:0px 30px;
+	overflow:hidden;
 	position:relative;
 }
 .chart div.canvas{
